Curve handles in the graph editor are broken when scaling annotation keyframes in the Dope Sheet #115813

Closed
opened 2023-12-05 17:31:00 +01:00 by sanek122005 · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce MX230/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08

Short description of error

Exact steps for others to reproduce the error

  • Scale keys in Dope Sheet in attached .blend file
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce MX230/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` **Short description of error** <video src="/attachments/7f615f3e-cc2e-4afc-bd00-8a057993db19" title="2023-12-05 19-28-47.mp4" controls></video> **Exact steps for others to reproduce the error** - Scale keys in Dope Sheet in attached .blend file
sanek122005 added the
Status
Needs Triage
Severity
Normal
Type
Report
labels 2023-12-05 17:31:00 +01:00
Iliya Katushenock added the
Interest
Animation & Rigging
label 2023-12-05 19:14:53 +01:00

I can confirm. It seems that the annotations are influencing in some way.

I can confirm. It seems that the annotations are influencing in some way.
Germano Cavalcante changed title from Broken keyframes scaling to Curve handles in the graph editor are broken when scaling annotation keyframes in the Dope Sheet 2023-12-05 21:57:27 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-05 22:38:21 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:05:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115813
No description provided.